k8s/node-api-depo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    api: node-api-depo
  name: node-api-depo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-api-depo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node-api-depo
    spec:
      containers:
      - image: claygilk/node-api
        name: node-api
        resources: {}
status: {}

# Created From:
# kubectl create deployment node-api-depo --image=claygilk/node-api --dry-run=client -oyaml
