k8s/bookshelf-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    api: node-api-depo
    frontend: vue-bookshelf-depo
    db: node-db-depo
  name: bookshelf-svc
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bookshelf
  type: ClusterIP
status:
  loadBalancer: {}
