k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vue-bookshelf-depo
  name: vue-bookshelf-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: vue-bookshelf-depo
  type: NodePort
status:
  loadBalancer: {}
