k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-svc
spec:
  selector:
    app: node-api-depo
  ports:
    - protocol: TCP
      port: 80
      targetPort: "http"
---

apiVersion: v1
kind: Service
metadata:
  name: node-db-svc
spec:
  selector:
    app: node-db-depo
  ports:
    - protocol: TCP
      port: 80
      targetPort: "http"
---

apiVersion: v1
kind: Service
metadata:
  name: vue-bookshelf-svc
spec:
  selector:
    app: vue-bookshelf-depo
  ports:
    - protocol: TCP
      port: 80
      targetPort: "http"
