k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vue-bookshelf-depo
  name: vue-bookshelf-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: vue-bookshelf-depo
