k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookshelf
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: vue-bookshelf-svc
            port:
              number: 8080
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: node-api-svc
            port:
              number: 80
      - path: /db/(.*)
        pathType: Prefix
        backend:
          service:
            name: node-db-svc
            port:
              number: 80
